api terminada (en espera de cambios)
Signed-off-by: FabricioPRZ <233394@ids.upchiapas.edu.mx>

--- a/.env
+++ b/.env
@@ -7,5 +7,6 @@ JWT_SECRET=multidisciplinarioFreeGarden2025
 
 MQTT_BROKER_URL=tcp://localhost:1883
 
-MQTT_USERNAME=usuario_mqtt
-MQTT_PASSWORD=contrasena_mqtt
+MQTT_USERNAME=fabricio
+MQTT_PASSWORD=fabricio
+RABBITMQ_URL=amqp://fabricio:fabricio@52.207.151.159/
