--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
-DB_USER=fabricio
-DB_PASSWORD=Fabricio.2312
+DB_USER=root
+DB_PASSWORD=Ameth2005
 DB_NAME=sensor_data
 
 JWT_SECRET=multidisciplinarioFreeGarden2025
